# robot_simulation

./: Makefile  launch.sh
executables/: ros2_macos.sh
src/anymal/: package.xml  setup.cfg  setup.py
src/anymal/config/: urdf.rviz
src/anymal/launch/: display.launch.py
src/anymal/urdf/: anymal.sdf  anymal.urdf  anymal_old1.urdf
src/basic/: package.xml  setup.cfg  setup.py
src/basic/launch/: display.launch.py
src/basic/urdf/: model.urdf
src/ghost_v60/: package.xml  setup.cfg  setup.py
src/ghost_v60/launch/: display.launch.py  gazebo.launch.py
src/ghost_v60/urdf/: vision_v60.urdf
src/publisher/: package.xml  setup.py
src/publisher/publisher/: publisher.py  subscriber.py
